--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
     <main>
         <header>
-            Título do Site
+            <h1>Cursos Grátis</h1>
         </header>
 
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias amet velit accusamus, rerum repellat alias quaerat dolorem quas corporis minima expedita. Exercitationem inventore iste quisquam qui, dolore temporibus voluptatibus amet.</p>
         </article>
 
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, veritatis officia consectetur corrupti facilis sed ea quo laborum, perspiciatis quas laboriosam natus itaque ducimus quos totam, molestias nihil explicabo alias!</p>
         </article>
     </main>    
 </body>
