--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <header>
-            Título do Site
+            <h1>Título do Site</h1>
         </header>
 
         <article>
