--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Curso em Vídeo</title>
+    <title>Curso em Vídeo</title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
 
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias amet velit accusamus, rerum repellat alias quaerat dolorem quas corporis minima expedita. Exercitationem inventore iste quisquam qui, dolore temporibus voluptatibus amet.</p>
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
         </article>
 
         <article>
