--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, veritatis officia consectetur corrupti facilis sed ea quo laborum, perspiciatis quas laboriosam natus itaque ducimus quos totam, molestias nihil explicabo alias!</p>
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
         </article>
     </main>    
 </body>
